--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="container" >
             <div class="msg-container hide">
-                <p id = "msg">Winner</p>
+                <p id = "msg"></p>
                 <button id="newgame">New game</button>
             </div>
 
